<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/speed_boat_blue"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo_content_description" />

    <TextView
        android:id="@+id/tvName"
        android:text="@string/text_name"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:layout_marginBottom="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginStart="@dimen/side_margins"
        android:layout_marginEnd="@dimen/side_margins"
        android:layout_marginTop="@dimen/top_margins"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/side_margins"
        android:layout_marginEnd="@dimen/side_margins"
        android:layout_marginTop="@dimen/top_margins"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:layout_marginStart="@dimen/side_margins"
        android:layout_marginEnd="@dimen/side_margins"
        android:layout_marginTop="@dimen/top_margins"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/text_register"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margins"
        android:layout_marginEnd="@dimen/side_margins"
        android:layout_marginTop="@dimen/top_margins"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>